<resources>
    <string name="app_name">HomeServiceHome</string>
    <string name="organisation">Organisation</string>
    <string name="client">Client</string>
    <string name="todo">TODO</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="organisation_name">Organisation name</string>
    <string name="organisation_email">Organisation email</string>
    <string name="servicetype">Service type</string>
    <string-array name="Services">
        <item>Cleaning</item>
        <item>Gardening</item>
        <item>Plumbing</item>
        <item>Electricity</item>
    </string-array>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin">Signin</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="user_name">User name</string>
    <string name="preferred_service_type">Preferred service type</string>
    <string name="organisation_contact">Organisation contact</string>
    <string name="user_contact">User contact</string>
    <string name="user_adderess">User adderess</string>
    <string name="user_email">User email</string>
    <string name="organisation_dashboard">Organisation Dashboard</string>
    <string name="user_dashboard">User dashboard</string>
    <string name="Cleaning">Cleaning</string>
    <string name="cooking">Cooking</string>
    <string name="plumbing">Plumbing</string>
    <string name="electricity">Electricity</string>
    <string name="gardening">Gardening</string>
    <string name="bathroom">Bathroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="room">Room</string>
    <string name="balcony">Balcony</string>
    <string name="wiring">WIRING</string>
    <string name="swich_socket">SWITCH \n SOCKET</string>
    <string name="light">LIGHT</string>
    <string name="fan">FAN</string>
    <string name="landscape_design">Landscape Design</string>
    <string name="pruning">PRUNING</string>
    <string name="lawn_aerater">LAWN AERATER</string>
    <string name="lawn">LAWN</string>
    <string name="pond_installation">Pond Installation</string>
    <string name="pruning_trimming"><![CDATA[PRUNING & TRIMMING]]></string>
    <string name="water_pipe">WATER PIPE</string>
    <string name="motor">MOTOR</string>
    <string name="toilet_sink"><![CDATA[TOILET & SINK]]></string>
    <string name="waterheater">WATER HEATER</string>
    <string name="heater">HEATER</string>
    <string name="bathroom_cleaning">Bathroom</string>
    <string name="price_399">Price: ₹ 399</string>
    <string name="price_99">Price: ₹ 99</string>
    <string name="price_299">Price: ₹ 299</string>
    <string name="price_599">Price: ₹ 599</string>
    <string name="price_109">Price: ₹ 109</string>
    <string name="price_130">Price: ₹ 130</string>
    <string name="price_149">Price: ₹ 149</string>
    <string name="price_449">Price: ₹ 449</string>
    <string name="price_549">Price: ₹ 549</string>
    <string name="price_25">Price: ₹ 25/Square feet </string>
    <string name="price_10">Price: ₹ 10/Square feet </string>
    <string name="price_95">Price: ₹ 95/Square meter </string>
    <string name="_60mins">• 60mins</string>
    <string name="_30mins">• 30mins</string>
    <string name="_120mins">• 120mins</string>
    <string name="_40mins">• 40mins</string>
    <string name="add">Add</string>
    <string name="point1">• Remove objects before cleaning. \n• Cleaning of all areas and surfaces.</string>
    <string name="point2">• Floor cleaning. \n• Door and window cleaning.</string>
    <string name="point3">• Dusting and Mopping. \n• Living room and bed room cleaning.</string>
    <string name="point4">• Kitchen sink cleaning. \n• Utensils cleaning. \n• Gas stove cleaning. \n• Oil and other stand cleaning.</string>
    <string name="point5">• Kitchen sink cleaning. \n• Utensils cleaning. \n• Gas stove cleaning. \n• Oil and other stand cleaning.</string>
    <string name="point6">• Installation of bulb or bulb holder. \n• Installation or repair of tubelight  \n  and celling light. \n• Festive light includes wiring \n  connectivity and clipping. \n• Price based on length of light strips.</string>
    <string name="point7">• Installation of AC switch box,\n  washing machine switch box.  \n• Replacement of one box/socket/\n  combination unit.  </string>
    <string name="point8">• Spare parts and wires are \n  produced at an additional cost.   \n• Wiring without outer casting for a \n  single connection. </string>
    <string name="point9">• Installation of one connection \n  hose to connect intel and outlet. \n• Replacement of pipe. \n• Washing machine installation. </string>
    <string name="point10">• Blockage removal of washbasin \n  and water pipe. \n• Installation of all kinds of \n  washbasin. \n• Flush repare and button \n  replacement. \n• Installation of toilet. \n• Repair Toilet </string>
    <string name="point11">• Installation of one small motor. \n• Replacement of motor. \n• Remove of air cavity in motor. </string>
    <string name="point12">• Installation/Repair of Heater. \n• Repair any type of Geyser.</string>
    <string name="point13">• Remove object before clening. \n• Provide landscape decore \n  services. \n• Lawn protect and feed.</string>
    <string name="point14">• Pull out work plant. \n• Built healthy and organic soil. \n• Minimize insect habitat. \n• Tree services, hedge trimming and \n   flower services.</string>
    <string name="point15">• Power washing and vacuuming \n  pond interiors. \n• Cleaning filter systems. \n• Re-filling ponds to safe water level \n  for fish aquatic plants.</string>
    <string name="point16">• Remove dead leaves, shape the \n  tree. \n• Cleaning land. \n• Also provide the terrace \n  gardening.</string>
    <string name="final_cart">Final Cart</string>
    <string name="balcony_cleaning">Balcony</string>
    <string name="room_cleaning">Room</string>
    <string name="kitchen_cleaning">Kitchen</string>
    <string name="user_state">User State</string>
    <string name="organization_cleaning">Organization \n Cleaning</string>
    <string name="organization_plumbing">Organization \n Plumbing</string>
    <string name="organization_electricity">Organization \n Electricity</string>
    <string name="organization_gardening">Organization \n Gardening</string>
    <string name="reset_password">Reset Password</string>
    <string name="city_state">City, State</string>
    <string name="organization_dashboard">Organization Dashboard</string>
    <string name="fan_repairing">Fan Repairing</string>
    <string name="lights_repairing">Lights Repairing</string>
    <string name="switch_repairing">Switch Repairing</string>
    <string name="todo1">TODO</string>
    <string name="purning_trimming">Purning/ Trimming</string>
    <string name="todo2">TODO</string>
    <string name="heater_repairing">Heater Repairing</string>
    <string name="motor_repairing">Motor Repairing</string>
    <string name="sink_repairing">Sink Repairing</string>
    <string name="pipe_repairing">Pipe Repairing</string>
    <string name="Wiring">Wiring</string>
    <string name="sink_and_toliet">Sink and Toliet</string>
    <string name="switch_and_socket">Switch and Socket</string>
    <string name="Water_Pipe">Water Pipe</string>
    <string name="Motor">Motor</string>
    <string name="lawn_maintenance">Lawn Maintenance</string>
    <string name="view_cart">View Cart</string>
    <string name="confirm_checkout"><![CDATA[Confirm & Checkout]]></string>
    <string name="pick_a_time">Pick a date and time</string>
    <string name="total_services">Total services</string>
    <string name="estimated_amount">Estimated amount</string>
    <string name="opted_services">Opted Services</string>
    <string name="wire_repairing">Wire Repairing</string>
    <string name="landscape_designing">Landscape Designing</string>
    <string name="purning_trimmin"><![CDATA[Purning & Trimming]]></string>
    <string name="water_pipe_repairing">Water Pipe Repairing</string>
    <string name="requests">Requests</string>
    <string name="list_of_client_requests">List of Client requests</string>
    <string name="selected_services">Selected Services</string>
    <string name="confirm">Confirm</string>


</resources>